--- a/css/eventide-rp-system.css
+++ b/css/eventide-rp-system.css
@@ -1888,30 +1888,87 @@
   margin-bottom: 4px;
   width: 100%;
 }
-.eventide-rp-system .checkbox-wrapper {
-  height: 28px;
-  display: flex;
-  width: 100%;
+.eventide-rp-system .form-checkbox-wrapper {
+  display: inline-flex;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+.eventide-rp-system .form-checkbox-wrapper.align-right {
+  justify-content: flex-end;
+}
+.eventide-rp-system .form-checkbox-wrapper input[type=checkbox]::before {
+  background-color: transparent !important;
+  color: transparent !important;
+  appearance: none !important;
+  -webkit-appearance: none !important;
+  -moz-appearance: none !important;
+}
+.eventide-rp-system .form-checkbox-wrapper .large-checkbox {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 1.7rem !important;
+  height: 1.7rem !important;
+  min-width: 1.7rem !important;
+  min-height: 1.7rem !important;
+  max-width: 1.7rem !important;
+  max-height: 1.7rem !important;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  position: relative;
+  display: block;
+  background-color: var(--eventide-rp-system-input-bg);
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.8), inset 0 1px 3px rgba(0, 0, 0, 0.6);
+}
+.eventide-rp-system .form-checkbox-wrapper .large-checkbox:checked:before {
+  background-color: #ffffff;
+}
+.eventide-rp-system .form-checkbox-wrapper .large-checkbox:checked:after {
+  content: "✓";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 1;
+}
+.eventide-rp-system .form-checkbox-wrapper .large-checkbox:hover {
+  background-image: linear-gradient(to bottom, #000000, #000000) !important;
+  box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.1), inset 0 1px 3px rgba(0, 0, 0, 0.7);
 }
 .eventide-rp-system .checkbox-wrapper.align-right {
   justify-content: flex-end;
 }
+.eventide-rp-system .checkbox-wrapper input[type=checkbox]::before {
+  background-color: transparent !important;
+  color: transparent !important;
+  appearance: none !important;
+  -webkit-appearance: none !important;
+  -moz-appearance: none !important;
+}
 .eventide-rp-system .checkbox-wrapper .large-checkbox {
   appearance: none;
   -webkit-appearance: none;
-  width: 28px !important;
-  height: 28px !important;
-  min-width: 28px !important;
-  min-height: 28px !important;
-  max-width: 28px !important;
-  max-height: 28px !important;
-  margin: 0;
+  -moz-appearance: none;
+  width: 1.7rem !important;
+  height: 1.7rem !important;
+  min-width: 1.7rem !important;
+  min-height: 1.7rem !important;
+  max-width: 1.7rem !important;
+  max-height: 1.7rem !important;
   cursor: pointer;
-  background-color: rgba(0, 0, 0, 0.6) !important;
   border: none;
   border-radius: 4px;
   position: relative;
+  display: block;
+  background-color: var(--eventide-rp-system-input-bg);
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.8), inset 0 1px 3px rgba(0, 0, 0, 0.6);
+}
+.eventide-rp-system .checkbox-wrapper .large-checkbox:checked:before {
+  background-color: #ffffff;
 }
 .eventide-rp-system .checkbox-wrapper .large-checkbox:checked:after {
   content: "✓";
@@ -1922,11 +1979,7 @@
   color: white;
   font-size: 20px;
   font-weight: bold;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
-}
-.eventide-rp-system .checkbox-wrapper .large-checkbox:hover {
-  background-color: rgba(0, 0, 0, 0.7) !important;
-  box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.1), inset 0 1px 3px rgba(0, 0, 0, 0.7);
+  line-height: 1;
 }
 .eventide-rp-system .base-form {
   height: 100%;
@@ -2021,14 +2074,27 @@
 .eventide-rp-system .resource-label {
   font-weight: bold;
 }
-.eventide-rp-system .checkbox-resource {
-  min-width: 200px;
-}
 .eventide-rp-system .checkbox-resource .checkbox-container {
-  display: flex;
+  display: grid;
+  grid-template-columns: minmax(min-content, max-content) 1fr;
   align-items: center;
-  gap: 16px;
-  white-space: nowrap;
+  gap: 0.25rem;
+  white-space: normal;
+  border: 2px outset #c9c7b8;
+  border-radius: 8px;
+  background-color: #151515;
+  font-size: 0.8rem;
+  padding: 0.2rem;
+}
+.eventide-rp-system .checkbox-resource .checkbox-label {
+  justify-self: start;
+  min-width: min-content;
+  hyphens: manual;
+}
+.eventide-rp-system .checkbox-resource .checkbox-content {
+  display: grid;
+  justify-self: end;
+  align-items: center;
 }
 .eventide-rp-system .ability {
   margin-bottom: 2px;
@@ -2328,6 +2394,12 @@
   margin: 0 6px;
 }
 .eventide-rp-system .items-list .item-controls .item-unequip {
+  color: #e7bc3c;
+}
+.eventide-rp-system .items-list .item-controls .item-unequip-disabled {
+  color: #e74c3c;
+}
+.eventide-rp-system .items-list .item-controls .item-decrement-disabled {
   color: #e74c3c;
 }
 .eventide-rp-system .items-list .item {
