--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -15,35 +15,47 @@
   }
 }
 
-.checkbox-wrapper {
-  height: 28px;
-  display: flex;
-  width: 100%;
+.form-checkbox-wrapper {
+  display: inline-flex;
+  align-items: center;
+  margin-bottom: 0.5rem;
 
   &.align-right {
     justify-content: flex-end;
   }
 
+  input[type="checkbox"]::before {
+    background-color: transparent !important;
+    color: transparent !important;
+    appearance: none !important;
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+  }
+
   .large-checkbox {
     appearance: none;
     -webkit-appearance: none;
-    width: 28px !important;
-    height: 28px !important;
-    min-width: 28px !important;
-    min-height: 28px !important;
-    max-width: 28px !important;
-    max-height: 28px !important;
-    margin: 0;
+    -moz-appearance: none;
+    width: 1.7rem !important;
+    height: 1.7rem !important;
+    min-width: 1.7rem !important;
+    min-height: 1.7rem !important;
+    max-width: 1.7rem !important;
+    max-height: 1.7rem !important;
     cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.6) !important;
     border: none;
     border-radius: 4px;
     position: relative;
+    display: block;
+    background-color: colors.$input-bg;
     box-shadow: 
       0 0 0 1px rgba(0, 0, 0, 0.8),
       inset 0 1px 3px rgba(0, 0, 0, 0.6);
 
     &:checked {
+      &:before {
+        background-color: #ffffff;
+      }
       &:after {
         content: '✓';
         position: absolute;
@@ -53,15 +65,67 @@
         color: white;
         font-size: 20px;
         font-weight: bold;
-        text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+        line-height: 1;
       }
     }
 
     &:hover {
-      background-color: rgba(0, 0, 0, 0.7) !important;
+      background-image: linear-gradient(to bottom, #000000, #000000) !important;
       box-shadow: 
         0 0 0 1px rgba(255, 255, 255, 0.1),
         inset 0 1px 3px rgba(0, 0, 0, 0.7);
+    }
+  }
+}
+
+.checkbox-wrapper {
+  &.align-right {
+    justify-content: flex-end;
+  }
+
+  input[type="checkbox"]::before {
+    background-color: transparent !important;
+    color: transparent !important;
+    appearance: none !important;
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+  }
+
+  .large-checkbox {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 1.7rem !important;
+    height: 1.7rem !important;
+    min-width: 1.7rem !important;
+    min-height: 1.7rem !important;
+    max-width: 1.7rem !important;
+    max-height: 1.7rem !important;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    position: relative;
+    display: block;
+    background-color: colors.$input-bg;
+    box-shadow: 
+      0 0 0 1px rgba(0, 0, 0, 0.8),
+      inset 0 1px 3px rgba(0, 0, 0, 0.6);
+
+    &:checked {
+      &:before {
+        background-color: #ffffff;
+      }
+      &:after {
+        content: '✓';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        font-size: 20px;
+        font-weight: bold;
+        line-height: 1;
+      }
     }
   }
 }
