--- a/src/scss/components/_resource.scss
+++ b/src/scss/components/_resource.scss
@@ -3,13 +3,30 @@
 }
 
 .checkbox-resource {
-  min-width: 200px;
   
   .checkbox-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: minmax(min-content, max-content) 1fr;
     align-items: center;
-    gap: 16px;
-    white-space: nowrap;
+    gap: 0.25rem;
+    white-space: normal;
+    border: 2px outset #c9c7b8;
+    border-radius: 8px;
+    background-color: #151515;
+    font-size: 0.8rem;
+    padding: 0.2rem;
+  }
+
+  .checkbox-label {
+    justify-self: start;
+    min-width: min-content;
+    hyphens: manual;
+  }
+
+  .checkbox-content {
+    display: grid;
+    justify-self: end;
+    align-items: center;
   }
 }
 
