V13 character sheet css update.

--- a/src/scss/global/_character-sheet.scss
+++ b/src/scss/global/_character-sheet.scss
@@ -72,7 +72,7 @@
 
 .eventide-character-sheet input {
   background-color: colors.$character-input;
-  color: colors.$c-white;
+  color: colors.$c-black;
   border-radius: 5px;
   border: 1px solid colors.$character-input-border;
 }
