--- a/templates/item/character-effects.hbs
+++ b/templates/item/character-effects.hbs
@@ -1,3 +1,246 @@
 <section class="tab effects {{tab.cssClass}}" data-group="primary" data-tab="characterEffects">
+          <h3>Effects</h3>
+
+        {{! Effects section partial for Eventide Item Sheet }}
+  <div class="eventide-item-sheet__effects-container">
+    <div class="eventide-item-sheet__effects-header">
+      <label class="eventide-item-sheet__effect-toggle eventide-item-sheet__effect-toggle--global" title="When enabled, this effect will be displayed on tokens">
+        <input 
+          type="checkbox" 
+          class="eventide-item-sheet__effect-display-token" 
+          name="effect.displayOnToken" 
+          {{#if activeEffect.duration.seconds}}checked{{/if}}
+          data-action="toggleEffectDisplay"
+        >
+        <span class="eventide-item-sheet__effect-toggle-label">Display On Token</span>
+      </label>
+    </div>
     
+    <div class="eventide-item-sheet__effects-grid">
+      <div class="eventide-item-sheet__effects-grid-header">
+        <div class="eventide-item-sheet__effects-grid-cell">Attribute</div>
+        <div class="eventide-item-sheet__effects-grid-cell">Mode</div>
+        <div class="eventide-item-sheet__effects-grid-cell">Value</div>
+        <div class="eventide-item-sheet__effects-grid-cell">Actions</div>
+      </div>
+      
+      {{#each characterEffects.regularEffects}}
+        <div class="eventide-item-sheet__effects-grid-row">
+          <div class="eventide-item-sheet__effects-grid-cell">
+            <select 
+              class="eventide-item-sheet__effect-attribute" 
+              name="characterEffects.regularEffects.{{@index}}.ability"
+              data-index="{{@index}}"
+              data-type="visible"
+            >
+              {{#each ../config.abilities as |label key|}}
+                <option value="{{key}}" {{#if (eq ../ability key)}}selected{{/if}}>
+                  {{localize label}}
+                </option>
+              {{/each}}
+            </select>
+          </div>
+          
+          <div class="eventide-item-sheet__effects-grid-cell">
+            <select 
+              class="eventide-item-sheet__effect-mode" 
+              name="characterEffects.regularEffects.{{@index}}.mode"
+              data-index="{{@index}}"
+              data-type="visible"
+            >
+              <option value="add" {{#if (eq mode "change")}}selected{{/if}}>Add</option>
+              <option value="override" {{#if (eq mode "override")}}selected{{/if}}>Override</option>
+              <option value="advantage" {{#if (eq mode "advantage")}}selected{{/if}}>Advantage</option>
+              <option value="disadvantage" {{#if (eq mode "disadvantage")}}selected{{/if}}>Disadvantage</option>
+            </select>
+          </div>
+          
+          <div class="eventide-item-sheet__effects-grid-cell">
+            <input 
+              type="number" 
+              class="eventide-item-sheet__effect-value" 
+              name="characterEffects.regularEffects.{{@index}}.value" 
+              value="{{value}}" 
+              step="1"
+              data-index="{{@index}}"
+              data-type="visible"
+            >
+          </div>
+          
+          <div class="eventide-item-sheet__effects-grid-cell">
+            <button 
+              type="button" 
+              class="eventide-item-sheet__effect-remove"
+              data-action="deleteCharacterEffect" 
+              data-index="{{@index}}"
+              data-type="regularEffects"
+              title="Remove effect"
+            >
+              <i class="fas fa-trash"></i>
+            </button>
+          </div>
+        </div>
+      {{/each}}
+    </div>
+    
+    <div class="eventide-item-sheet__effect-controls">
+      <button 
+        type="button" 
+        class="eventide-item-sheet__add-effect"
+        data-action="newCharacterEffect" 
+        data-type="abilities"
+        data-ability="acro"
+        title="Add new effect"
+      >
+        <i class="fas fa-plus"></i> Add Effect
+      </button>
+    </div>
+    
+    {{#if isGM}}
+      <details class="eventide-item-sheet__hidden-effects" open>
+        <summary class="eventide-item-sheet__hidden-effects-header">Hidden Effects ({{characterEffects.hiddenEffects.length}})</summary>
+        
+        <div class="eventide-item-sheet__effects-grid">
+          <div class="eventide-item-sheet__effects-grid-header">
+            <div class="eventide-item-sheet__effects-grid-cell">Attribute</div>
+            <div class="eventide-item-sheet__effects-grid-cell">Mode</div>
+            <div class="eventide-item-sheet__effects-grid-cell">Value</div>
+            <div class="eventide-item-sheet__effects-grid-cell">Actions</div>
+          </div>
+          
+          {{#each characterEffects.hiddenEffects}}
+            <div class="eventide-item-sheet__effects-grid-row eventide-item-sheet__effects-grid-row--hidden">
+              <div class="eventide-item-sheet__effects-grid-cell">
+                <select 
+                  class="eventide-item-sheet__effect-attribute" 
+                  name="characterEffects.hiddenEffects.{{@index}}.ability"
+                  data-index="{{@index}}"
+                  data-type="hiddenEffects"
+                >
+                  {{#each ../config.hiddenAbilities as |label key|}}
+                    <option value="{{key}}" {{#if (eq ../ability key)}}selected{{/if}}>
+                      {{localize label}}
+                    </option>
+                  {{/each}}
+                </select>
+              </div>
+              
+              <div class="eventide-item-sheet__effects-grid-cell">
+                <select 
+                  class="eventide-item-sheet__effect-mode" 
+                  name="characterEffects.hiddenEffects.{{@index}}.mode"
+                  data-index="{{@index}}"
+                  data-type="hiddenEffects"
+                >
+                  <option value="add" {{#if (eq mode "change")}}selected{{/if}}>Add</option>
+                  <option value="override" {{#if (eq mode "override")}}selected{{/if}}>Override</option>
+                </select>
+              </div>
+              
+              <div class="eventide-item-sheet__effects-grid-cell">
+                <input 
+                  type="number" 
+                  class="eventide-item-sheet__effect-value" 
+                  name="characterEffects.hiddenEffects.{{@index}}.value" 
+                  value="{{value}}" 
+                  step="1"
+                  data-index="{{@index}}"
+                  data-type="hiddenEffects"
+                >
+              </div>
+              
+              <div class="eventide-item-sheet__effects-grid-cell">
+                <button 
+                  type="button" 
+                  class="eventide-item-sheet__effect-remove"
+                  data-action="deleteCharacterEffect" 
+                  data-index="{{@index}}" 
+                  data-type="hiddenEffects"
+                  title="Remove hidden effect"
+                >
+                  <i class="fas fa-trash"></i>
+                </button>
+              </div>
+            </div>
+          {{/each}}
+        </div>
+        
+        <div class="eventide-item-sheet__effect-controls">
+          <button 
+            type="button" 
+            class="eventide-item-sheet__add-effect"
+            data-action="newCharacterEffect" 
+            data-type="hiddenAbilities"
+            data-ability="dice"
+            title="Add new hidden effect"
+          >
+            <i class="fas fa-plus"></i> Add Hidden Effect
+          </button>
+        </div>
+      </details>
+    {{else if hiddenEffects.length}}
+      <details class="eventide-item-sheet__hidden-effects" open>
+        <summary class="eventide-item-sheet__hidden-effects-header">Hidden Effects ({{characterEffects.hiddenEffects.length}})</summary>
+        
+        <div class="eventide-item-sheet__effects-grid">
+          <div class="eventide-item-sheet__effects-grid-header">
+            <div class="eventide-item-sheet__effects-grid-cell">Attribute</div>
+            <div class="eventide-item-sheet__effects-grid-cell">Mode</div>
+            <div class="eventide-item-sheet__effects-grid-cell">Value</div>
+            <div class="eventide-item-sheet__effects-grid-cell">Actions</div>
+          </div>
+          
+          {{#each characterEffects.hiddenEffects}}
+            <div class="eventide-item-sheet__effects-grid-row eventide-item-sheet__effects-grid-row--hidden">
+              <div class="eventide-item-sheet__effects-grid-cell">
+                <select 
+                  class="eventide-item-sheet__effect-attribute" 
+                  name="characterEffects.hiddenEffects.{{@index}}.ability"
+                  data-index="{{@index}}"
+                  data-type="hidden"
+                  disabled
+                >
+                  {{#each ../config.hiddenAbilities as |label key|}}
+                    <option value="{{key}}" {{#if (eq ../ability key)}}selected{{/if}}>
+                      {{localize label}}
+                    </option>
+                  {{/each}}
+                </select>
+              </div>
+              
+              <div class="eventide-item-sheet__effects-grid-cell">
+                <select 
+                  class="eventide-item-sheet__effect-mode" 
+                  name="characterEffects.hiddenEffects.{{@index}}.mode"
+                  data-index="{{@index}}"
+                  data-type="hidden"
+                  disabled
+                >
+                  <option value="add" {{#if (eq mode "change")}}selected{{/if}}>Add</option>
+                  <option value="override" {{#if (eq mode "override")}}selected{{/if}}>Override</option>
+                </select>
+              </div>
+              
+              <div class="eventide-item-sheet__effects-grid-cell">
+                <input 
+                  type="number" 
+                  class="eventide-item-sheet__effect-value" 
+                  name="characterEffects.hiddenEffects.{{@index}}.value" 
+                  value="{{value}}" 
+                  step="1"
+                  data-index="{{@index}}"
+                  data-type="hidden"
+                  disabled
+                >
+              </div>
+              
+              <div class="eventide-item-sheet__effects-grid-cell">
+                <!-- No remove button for non-GM users -->
+              </div>
+            </div>
+          {{/each}}
+        </div>
+      </details>
+    {{/if}}
+  </div>
 </section>
