--- a/templates/item/parts/effects.hbs
+++ b/templates/item/parts/effects.hbs
@@ -1,22 +1,19 @@
-<section class="tab effects {{tab.cssClass}}" data-group="primary" data-tab="characterEffects">
-          <label 
-            class="eventide-item-sheet__effect-toggle {{#if activeEffect.duration.seconds}}eventide-item-sheet__effect-toggle--active{{/if}}" 
-            title="When enabled, this effect will be displayed on tokens">
-            <input 
-            type="checkbox" 
-            class="eventide-item-sheet__effect-display-token" 
-            name="effect.displayOnToken" 
-            {{#if activeEffect.duration.seconds}}checked{{/if}}
-            data-action="toggleEffectDisplay"
-            >
-            <span 
-                class="eventide-item-sheet__effect-toggle-label"
-            >
-                {{#if activeEffect.duration.seconds}}<i class="fa-solid fa-square-check"></i> Icon Displayed On Token{{else}}<i class="fa-solid fa-square"></i> Icon Displayed On Token{{/if}}
-            </span>
-        </label>
-
-        {{! Effects section partial for Eventide Item Sheet }}
+{{! Effects section partial for Eventide Item Sheet }}
+{{#if activeEffect}}
+  <div class="eventide-item-sheet__effects-container">
+    <div class="eventide-item-sheet__effects-header">
+      <label class="eventide-item-sheet__effect-toggle eventide-item-sheet__effect-toggle--global" title="When enabled, this effect will be displayed on tokens">
+        <input 
+          type="checkbox" 
+          class="eventide-item-sheet__effect-display-token" 
+          name="effect.displayOnToken" 
+          {{#if effect.duration.seconds}}checked{{/if}}
+          data-action="toggleEffectDisplay"
+        >
+        <span class="eventide-item-sheet__effect-toggle-label">Display On Token</span>
+      </label>
+    </div>
+    
     <div class="eventide-item-sheet__effects-grid">
       <div class="eventide-item-sheet__effects-grid-header">
         <div class="eventide-item-sheet__effects-grid-cell">Attribute</div>
@@ -25,17 +22,17 @@
         <div class="eventide-item-sheet__effects-grid-cell">Actions</div>
       </div>
       
-      {{#each characterEffects.regularEffects}}
+      {{#each visibleEffects}}
         <div class="eventide-item-sheet__effects-grid-row">
           <div class="eventide-item-sheet__effects-grid-cell">
             <select 
               class="eventide-item-sheet__effect-attribute" 
-              name="characterEffects.regularEffects.{{@index}}.ability"
+              name="changes.{{@index}}.key"
               data-index="{{@index}}"
               data-type="visible"
             >
               {{#each ../config.abilities as |label key|}}
-                <option value="{{key}}" {{#if (eq ../ability key)}}selected{{/if}}>
+                <option value="{{key}}" {{#if (eq ../key key)}}selected{{/if}}>
                   {{localize label}}
                 </option>
               {{/each}}
@@ -45,14 +42,14 @@
           <div class="eventide-item-sheet__effects-grid-cell">
             <select 
               class="eventide-item-sheet__effect-mode" 
-              name="characterEffects.regularEffects.{{@index}}.mode"
+              name="changes.{{@index}}.mode"
               data-index="{{@index}}"
               data-type="visible"
             >
-              <option value="add" {{#if (eq mode "change")}}selected{{/if}}>Add</option>
-              <option value="override" {{#if (eq mode "override")}}selected{{/if}}>Override</option>
-              <option value="advantage" {{#if (eq mode "advantage")}}selected{{/if}}>Advantage</option>
-              <option value="disadvantage" {{#if (eq mode "disadvantage")}}selected{{/if}}>Disadvantage</option>
+              <option value="add" {{#if (eq decodedMode "change")}}selected{{/if}}>Add</option>
+              <option value="override" {{#if (eq decodedMode "override")}}selected{{/if}}>Override</option>
+              <option value="advantage" {{#if (eq decodedMode "advantage")}}selected{{/if}}>Advantage</option>
+              <option value="disadvantage" {{#if (eq decodedMode "disadvantage")}}selected{{/if}}>Disadvantage</option>
             </select>
           </div>
           
@@ -60,7 +57,7 @@
             <input 
               type="number" 
               class="eventide-item-sheet__effect-value" 
-              name="characterEffects.regularEffects.{{@index}}.value" 
+              name="changes.{{@index}}.value" 
               value="{{value}}" 
               step="1"
               data-index="{{@index}}"
@@ -72,9 +69,8 @@
             <button 
               type="button" 
               class="eventide-item-sheet__effect-remove"
-              data-action="deleteCharacterEffect" 
-              data-index="{{@index}}"
-              data-type="regularEffects"
+              data-action="removeEffect" 
+              data-index="{{@index}}" 
               title="Remove effect"
             >
               <i class="fas fa-trash"></i>
@@ -88,18 +84,26 @@
       <button 
         type="button" 
         class="eventide-item-sheet__add-effect"
-        data-action="newCharacterEffect" 
-        data-type="abilities"
-        data-ability="acro"
+        data-action="addEffect" 
+        data-type="visible"
         title="Add new effect"
       >
         <i class="fas fa-plus"></i> Add Effect
+      </button>
+      
+      <button 
+        type="button" 
+        class="eventide-item-sheet__save-effects"
+        data-action="saveEffects" 
+        title="Save all effect changes"
+      >
+        <i class="fas fa-save"></i> Save Changes
       </button>
     </div>
     
     {{#if isGM}}
       <details class="eventide-item-sheet__hidden-effects" open>
-        <summary class="eventide-item-sheet__hidden-effects-header">Hidden Effects ({{characterEffects.hiddenEffects.length}})</summary>
+        <summary class="eventide-item-sheet__hidden-effects-header">Hidden Effects ({{hiddenEffects.length}})</summary>
         
         <div class="eventide-item-sheet__effects-grid">
           <div class="eventide-item-sheet__effects-grid-header">
@@ -109,17 +113,17 @@
             <div class="eventide-item-sheet__effects-grid-cell">Actions</div>
           </div>
           
-          {{#each characterEffects.hiddenEffects}}
+          {{#each hiddenEffects}}
             <div class="eventide-item-sheet__effects-grid-row eventide-item-sheet__effects-grid-row--hidden">
               <div class="eventide-item-sheet__effects-grid-cell">
                 <select 
                   class="eventide-item-sheet__effect-attribute" 
-                  name="characterEffects.hiddenEffects.{{@index}}.ability"
+                  name="hiddenChanges.{{@index}}.key"
                   data-index="{{@index}}"
-                  data-type="hiddenEffects"
+                  data-type="hidden"
                 >
                   {{#each ../config.hiddenAbilities as |label key|}}
-                    <option value="{{key}}" {{#if (eq ../ability key)}}selected{{/if}}>
+                    <option value="{{key}}" {{#if (eq ../hiddenAbility key)}}selected{{/if}}>
                       {{localize label}}
                     </option>
                   {{/each}}
@@ -129,12 +133,12 @@
               <div class="eventide-item-sheet__effects-grid-cell">
                 <select 
                   class="eventide-item-sheet__effect-mode" 
-                  name="characterEffects.hiddenEffects.{{@index}}.mode"
+                  name="hiddenChanges.{{@index}}.mode"
                   data-index="{{@index}}"
-                  data-type="hiddenEffects"
+                  data-type="hidden"
                 >
-                  <option value="add" {{#if (eq mode "change")}}selected{{/if}}>Add</option>
-                  <option value="override" {{#if (eq mode "override")}}selected{{/if}}>Override</option>
+                  <option value="add" {{#if (eq decodedMode "change")}}selected{{/if}}>Add</option>
+                  <option value="override" {{#if (eq decodedMode "override")}}selected{{/if}}>Override</option>
                 </select>
               </div>
               
@@ -142,11 +146,11 @@
                 <input 
                   type="number" 
                   class="eventide-item-sheet__effect-value" 
-                  name="characterEffects.hiddenEffects.{{@index}}.value" 
+                  name="hiddenChanges.{{@index}}.value" 
                   value="{{value}}" 
                   step="1"
                   data-index="{{@index}}"
-                  data-type="hiddenEffects"
+                  data-type="hidden"
                 >
               </div>
               
@@ -154,9 +158,8 @@
                 <button 
                   type="button" 
                   class="eventide-item-sheet__effect-remove"
-                  data-action="deleteCharacterEffect" 
+                  data-action="removeEffect" 
                   data-index="{{@index}}" 
-                  data-type="hiddenEffects"
                   title="Remove hidden effect"
                 >
                   <i class="fas fa-trash"></i>
@@ -170,18 +173,26 @@
           <button 
             type="button" 
             class="eventide-item-sheet__add-effect"
-            data-action="newCharacterEffect" 
-            data-type="hiddenAbilities"
-            data-ability="dice"
+            data-action="addEffect" 
+            data-type="hidden"
             title="Add new hidden effect"
           >
             <i class="fas fa-plus"></i> Add Hidden Effect
+          </button>
+          
+          <button 
+            type="button" 
+            class="eventide-item-sheet__save-effects"
+            data-action="saveEffects" 
+            title="Save all effect changes"
+          >
+            <i class="fas fa-save"></i> Save Changes
           </button>
         </div>
       </details>
     {{else if hiddenEffects.length}}
       <details class="eventide-item-sheet__hidden-effects" open>
-        <summary class="eventide-item-sheet__hidden-effects-header">Hidden Effects ({{characterEffects.hiddenEffects.length}})</summary>
+        <summary class="eventide-item-sheet__hidden-effects-header">Hidden Effects ({{hiddenEffects.length}})</summary>
         
         <div class="eventide-item-sheet__effects-grid">
           <div class="eventide-item-sheet__effects-grid-header">
@@ -191,18 +202,18 @@
             <div class="eventide-item-sheet__effects-grid-cell">Actions</div>
           </div>
           
-          {{#each characterEffects.hiddenEffects}}
+          {{#each hiddenEffects}}
             <div class="eventide-item-sheet__effects-grid-row eventide-item-sheet__effects-grid-row--hidden">
               <div class="eventide-item-sheet__effects-grid-cell">
                 <select 
                   class="eventide-item-sheet__effect-attribute" 
-                  name="characterEffects.hiddenEffects.{{@index}}.ability"
+                  name="hiddenChanges.{{@index}}.key"
                   data-index="{{@index}}"
                   data-type="hidden"
                   disabled
                 >
                   {{#each ../config.hiddenAbilities as |label key|}}
-                    <option value="{{key}}" {{#if (eq ../ability key)}}selected{{/if}}>
+                    <option value="{{key}}" {{#if (eq ../hiddenAbility key)}}selected{{/if}}>
                       {{localize label}}
                     </option>
                   {{/each}}
@@ -212,13 +223,13 @@
               <div class="eventide-item-sheet__effects-grid-cell">
                 <select 
                   class="eventide-item-sheet__effect-mode" 
-                  name="characterEffects.hiddenEffects.{{@index}}.mode"
+                  name="hiddenChanges.{{@index}}.mode"
                   data-index="{{@index}}"
                   data-type="hidden"
                   disabled
                 >
-                  <option value="add" {{#if (eq mode "change")}}selected{{/if}}>Add</option>
-                  <option value="override" {{#if (eq mode "override")}}selected{{/if}}>Override</option>
+                  <option value="add" {{#if (eq decodedMode "change")}}selected{{/if}}>Add</option>
+                  <option value="override" {{#if (eq decodedMode "override")}}selected{{/if}}>Override</option>
                 </select>
               </div>
               
@@ -226,7 +237,7 @@
                 <input 
                   type="number" 
                   class="eventide-item-sheet__effect-value" 
-                  name="characterEffects.hiddenEffects.{{@index}}.value" 
+                  name="hiddenChanges.{{@index}}.value" 
                   value="{{value}}" 
                   step="1"
                   data-index="{{@index}}"
@@ -244,4 +255,6 @@
       </details>
     {{/if}}
   </div>
-</section>
+{{else}}
+  <p class="eventide-item-sheet__no-effects">No effects have been added to this item yet.</p>
+{{/if}}
